updated config files

--- a/config/run.config
+++ b/config/run.config
@@ -2,6 +2,8 @@ params {
 
 	output_dir = "nevermore_out"
 
+	mailer = "/usr/bin/mail"
+
 	/*
 	How are the results stored in the output folder?
 	By default, the files are symlinked from the work dir, so ensure to dereference
@@ -22,6 +24,33 @@ params {
 	*/
     reference = "/scratch/schudoma/igc.ngm/0.0/data/IGC.fna"
 
+
+	/*
+		bbduk qc parameters
+		s. https://jgi.doe.gov/data-and-tools/bbtools/bb-tools-user-guide/bbduk-guide/
+		qtrim=rl trimq=3 : gentle quality trimming (only discard bases < phred 3; phred 2 = junk marker) on either side (rl) of the read
+		maq=25 : discard reads below average quality of pred 25
+		ref=?? ktrim=r k=23 mink=11 hdist=1 tpe tbo : right-side k-mer based adapter clipping with 1 mismatch allowed, try overlap-detection (tbo), and trim pairs to same length (tpe) upon adapter detection
+		ftm=5 : get rid off (n*5)+1st base (last sequencing cycle illumina garbage)
+		entropy=0.5 entropywindow=50 entropyk=5 : discard low complexity sequences
+	*/
+
+	qc_params_shotgun = "qtrim=rl trimq=3 maq=25 ktrim=r k=23 mink=11 hdist=1 ftm=5 entropy=0.5 entropywindow=50 entropyk=5 tpe tbo"
+
+	/ * EXPERIMENTAL */
+	qc_params_amplicon_primers = "qtrim=rl trimq=3 ktrim=l k=14 mink=1 hdist=1 cu=t"
+	qc_params_amplicon = "qtrim=rl trimq=3 ktrim=l k=23 mink=1 hdist=1 tpe tbo cu=t"
+	/ * \EXPERIMENTAL */
+
+	/* BBDUK LENGTH FILTER */
+	// only keep reads of at least length = qc_minlen
+	//qc_minlen = 45    // NGLess functional profiling
+	//qc_minlen = 100	// 16S gaga2
+	qc_minlen = 50
+
+	/* STEPWISE 16S AMPLICON PRIMER REMOVAL */
+	// If only primer lengths are supplied, figaro/dada2 will take care of primer removal.
+	// Otherwise, if primer sequences are supplied,
     // If primer sequences are supplied via --primer
     // primer + adapter removal is a two-step process:
     // 1. gentle quality trimming (< phred 3) + remove left primer on 5'-R1 and potentially on 3'-R2 (rc)
@@ -42,9 +71,6 @@ params {
 
 	qc_params_shotgun = "qtrim=rl trimq=3 maq=25 ktrim=r k=23 mink=11 hdist=1 ftm=5 entropy=0.5 entropywindow=50 entropyk=5 tpe tbo"
 
-	// only keep reads of at least length = qc_minlen
-	qc_minlen = 45
-    // qc_minlen = 100 // -> for 16S in amplicon_mode
 }
 
 /* section below needs to be adjusted to local cluster */
