reduced number of alignments / sample by orphan/chimera merging prior to alignment step

--- a/config/run.config
+++ b/config/run.config
@@ -205,6 +205,14 @@ process {
         time = {2.d * task.attempt}
         maxRetries = 4
     }
+	withName: merge_single_fastqs {
+	    executor = "slurm"
+	    errorStrategy = {task.attempt <= 4 ? "retry" : "ignore"}
+	    cpus = 1
+	    memory = {2.GB * task.attempt}
+	    time = {2.d * task.attempt}
+	    maxRetries = 4
+	}
 }
 
 singularity {
