Read stats collation and bugfixes * added block size to bwa_mem_align * added collate_stats process * added collate_stats to run.config * added fastqc.out.counts to nevermore_simple_processing outputs * fixed issue that would sometimes prevent individual fastqc reports from being collated * added read_counts and flagstats to nevermore_align workflow

--- a/config/run.config
+++ b/config/run.config
@@ -213,6 +213,10 @@ process {
 	    time = {2.d * task.attempt}
 	    maxRetries = 4
 	}
+    withName: collate_stats {
+        errorStrategy = {task.attempt <= 4 ? "retry" : "ignore"}
+        maxRetries = 4
+    }
 }
 
 singularity {
