--- a/config/run.config
+++ b/config/run.config
@@ -92,7 +92,7 @@ process {
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
         cpus = 2
         memory = {4.GB * task.attempt}
-        time = '7d'
+        time = {4.h * task.attempt}
         maxRetries = 3
     }
     withName: multiqc {
