fixed reproducibility issue by adding fastq-sorting and adjusted bwa mem -K to 10000000

--- a/config/run.config
+++ b/config/run.config
@@ -206,10 +206,11 @@ process {
         maxRetries = 4
     }
 	withName: merge_single_fastqs {
+        container = "oras://ghcr.io/cschu/nevermore:latest"
 	    executor = "slurm"
 	    errorStrategy = {task.attempt <= 4 ? "retry" : "ignore"}
 	    cpus = 1
-	    memory = {2.GB * task.attempt}
+	    memory = {8.GB * task.attempt}
 	    time = {2.d * task.attempt}
 	    maxRetries = 4
 	}
