--- a/config/run.config
+++ b/config/run.config
@@ -1,79 +1,3 @@
-params {
-
-    output_dir = "nevermore_out"
-
-    mailer = "/usr/bin/mail"
-
-    /*
-    How are the results stored in the output folder?
-    By default, the files are symlinked from the work dir, so ensure to dereference
-    the symlinks before removing the work dir.
-    For low volume results, change to "copy" or, if the file system supports it, to "link".
-    (EMBL /scratch does not support "link")
-    */
-    publish_mode = "copy"
-
-    /*
-    Set the path to a kraken2 database for host-removal
-    */
-    remove_host_kraken2_db = "/g/scb/zeller/schudoma/kraken2/hg38_silva_genome"
-    kraken2_min_hit_groups = 10
-
-    /*
-    Set the path to a reference db
-    */
-    reference = "/scratch/schudoma/igc.ngm/0.0/data/IGC.fna"
-
-
-    /*
-        bbduk qc parameters
-        s. https://jgi.doe.gov/data-and-tools/bbtools/bb-tools-user-guide/bbduk-guide/
-        qtrim=rl trimq=3 : gentle quality trimming (only discard bases < phred 3; phred 2 = junk marker) on either side (rl) of the read
-        maq=25 : discard reads below average quality of pred 25
-        ref=?? ktrim=r k=23 mink=11 hdist=1 tpe tbo : right-side k-mer based adapter clipping with 1 mismatch allowed, try overlap-detection (tbo), and trim pairs to same length (tpe) upon adapter detection
-        ftm=5 : get rid off (n*5)+1st base (last sequencing cycle illumina garbage)
-        entropy=0.5 entropywindow=50 entropyk=5 : discard low complexity sequences
-    */
-
-    qc_params_shotgun = "qtrim=rl trimq=3 maq=25 ktrim=r k=23 mink=11 hdist=1 ftm=5 entropy=0.5 entropywindow=50 entropyk=5 tpe tbo"
-
-    / * EXPERIMENTAL */
-    qc_params_amplicon_primers = "qtrim=rl trimq=3 ktrim=l k=14 mink=1 hdist=1 cu=t"
-    qc_params_amplicon = "qtrim=rl trimq=3 ktrim=l k=23 mink=1 hdist=1 tpe tbo cu=t"
-    / * \EXPERIMENTAL */
-
-    /* BBDUK LENGTH FILTER */
-    // only keep reads of at least length = qc_minlen
-    //qc_minlen = 45    // NGLess functional profiling
-    //qc_minlen = 100    // 16S gaga2
-    qc_minlen = 50
-
-    /* STEPWISE 16S AMPLICON PRIMER REMOVAL */
-    // If only primer lengths are supplied, figaro/dada2 will take care of primer removal.
-    // Otherwise, if primer sequences are supplied,
-    // If primer sequences are supplied via --primer
-    // primer + adapter removal is a two-step process:
-    // 1. gentle quality trimming (< phred 3) + remove left primer on 5'-R1 and potentially on 3'-R2 (rc)
-    // 2. remove right primer on 5'-R2 and potentially on 3'-R1 (rc)
-
-    // Primer removal is highly dataset-specific, you might have to play with the settings below:
-    // also refer to: https://jgi.doe.gov/data-and-tools/bbtools/bb-tools-user-guide/bbduk-guide/
-    // cu=t : allow degenerate primer sequences
-    // qtrim=rl trimq=3 : gentle quality trimming (< phred 3) on both sides
-    // ktrim=(r|l) : clip adapters from right xor left end -- DO NOT MODIFY.
-    // restrictleft|restrictright : only take into account the first / last N bases for adapter clipping
-    // k=9 hdist=1: adapter/primer k-mers of length 9 have to match with at most one mismatch
-    // mink=1: at the ends of reads, perfect (mismatch=0) adapter/primer k-mer matches of length 1 are allowed (similar to cutadapt)
-    // -- to allow mismatches, set hdist2 to a positive, non-zero integer
-
-    p5_primer_params = "cu=t qtrim=rl ktrim=l trimq=3 k=9 mink=1 hdist=1 restrictleft=50"
-    p3_primer_params = "cu=t ktrim=r k=9 mink=1 hdist=1 restrictright=50"
-
-    qc_params_shotgun = "qtrim=rl trimq=3 maq=25 ktrim=r k=23 mink=11 hdist=1 ftm=5 entropy=0.5 entropywindow=50 entropyk=5 tpe tbo"
-
-}
-
-/* section below needs to be adjusted to local cluster */
 executor {
     $slurm {
         queueSize = 30
@@ -101,7 +25,7 @@ process {
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
         cpus = 1
         memory = {4.GB * task.attempt}
-        time = '7d'
+        time = {4.h * task.attempt}
         maxRetries = 3
     }
     withName: bam2fq {
@@ -131,7 +55,7 @@ process {
         //memory = {8.GB * task.attempt}
         //memory = {bam.size() < 10.GB ? 8.GB * task.attempt : (bam.size() < 30.GB ? 16.GB * task.attempt : 32.GB * task.attempt)}
         memory = {2.GB * task.attempt}
-        time = '7d'
+        time = {4.h * task.attempt}
         maxRetries = 3
     }
     withLabel: kraken2 {
@@ -174,8 +98,9 @@ process {
         executor = "slurm"
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
         cpus = 8
-        memory = {16.GB * task.attempt}
-        time = '7d'
+		// 16.GB for IGC, 128.GB for human-gut GMGC
+        memory = {128.GB * task.attempt}
+        time = '14d'
         maxRetries = 3
     }
     withLabel: samtools {
@@ -183,8 +108,9 @@ process {
         executor = "slurm"
         errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
         cpus = 8
-        memory = {16.GB * task.attempt}
-        time = '8h'
+		// 16.GB for IGC, 64.GB for human-gut GMGC
+        memory = {64.GB * task.attempt}
+        time = '14d'
         maxRetries = 3
     }
     withName: run_gffquant {
@@ -192,7 +118,7 @@ process {
         executor = "slurm"
         errorStrategy = {task.attempt <= 4 ? "retry" : "ignore"}
         cpus = 1
-        memory = {16.GB * task.attempt}
+        memory = {32.GB * task.attempt}
         time = {2.d * task.attempt}
         maxRetries = 4
     }
@@ -201,7 +127,7 @@ process {
         executor = "slurm"
         errorStrategy = {task.attempt <= 4 ? "retry" : "ignore"}
         cpus = 1
-        memory = {8.GB * task.attempt}
+        memory = {16.GB * task.attempt}
         time = {2.d * task.attempt}
         maxRetries = 4
     }
