added fq2fa converter

--- a/config/run.config
+++ b/config/run.config
@@ -144,6 +144,15 @@ process {
         errorStrategy = {task.attempt <= 4 ? "retry" : "ignore"}
         maxRetries = 4
     }
+    withName: fq2fa {
+        container = "oras://ghcr.io/cschu/nevermore:latest"
+        executor = "slurm"
+        errorStrategy = {task.attempt <= 3 ? "retry" : "ignore"}
+        cpus = 1
+        memory = {8.GB * task.attempt}
+        time = {2.h * task.attempt}
+        maxRetries = 3
+    }
 }
 
 singularity {
