--- a/nextflow.config
+++ b/nextflow.config
@@ -1,8 +1,8 @@
 manifest {
 	author = "Christian Schudoma"
 	defaultBranch = "main"
-	description = "Metagenomic functional profiling pipeline"
+	description = "Metaomics pipeline toolbox"
 	name = "nevermore"
-	nextflowVersion = ">=21.10.4"
-	version = "0.8.1"
+	nextflowVersion = ">=22.10.6"
+	version = "0.9"
 }
