ignore instead of terminate

--- a/config/run.config
+++ b/config/run.config
@@ -24,7 +24,7 @@ process {
 	}
     withName: fastqc {
         executor = "slurm"
-        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 3) ? "retry" : "terminate"}
+        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 3) ? "retry" : "ignore"}
         cpus = 2
         memory = {4.GB * task.attempt}
         time = {4.h * task.attempt}
@@ -33,7 +33,7 @@ process {
     withName: multiqc {
         executor = "slurm"
         publishDir = [ path: params.output_dir ]
-        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 3) ? "retry" : "terminate"}
+        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 3) ? "retry" : "ignore"}
         cpus = 1
         memory = {4.GB * task.attempt}
         time = {4.h * task.attempt}
@@ -41,7 +41,7 @@ process {
     }
     withName: flagstats {
         executor = "slurm"
-        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 3) "retry" : "terminate"}
+        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 3) "retry" : "ignore"}
         cpus = 2
         //memory = {bam.size() < 10.GB ? 8.GB * task.attempt : (bam.size() < 30.GB ? 16.GB * task.attempt : 32.GB * task.attempt)}
         memory = {2.GB * task.attempt}
@@ -50,7 +50,7 @@ process {
     }
     withLabel: kraken2 {
         executor = "slurm"
-        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 3) ? "retry" : "terminate"}
+        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 3) ? "retry" : "ignore"}
         cpus = 8
         memory = {64.GB * task.attempt}
         time = '5d'
@@ -58,7 +58,7 @@ process {
     }
     withLabel: bbduk {
         executor = "slurm"
-        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 3) ? "retry" : "terminate"}
+        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 3) ? "retry" : "ignore"}
         cpus = 4
         memory = {8.GB * task.attempt}
         time = '2h'
@@ -66,7 +66,7 @@ process {
     }
     withName: concat_singles {
         executor = "slurm"
-        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 3) ? "retry" : "terminate"}
+        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 3) ? "retry" : "ignore"}
         cpus = 1
         memory = '2.GB'
         time = '8h'
@@ -74,7 +74,7 @@ process {
     }
     withLabel: align {
         executor = "slurm"
-        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 3) ? "retry" : "terminate"}
+        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 3) ? "retry" : "ignore"}
         cpus = 8
 		// 16.GB for IGC, 128.GB for human-gut GMGC
         memory = {96.GB * task.attempt}
@@ -84,7 +84,7 @@ process {
     withLabel: samtools {
         executor = "slurm"
         publishDir = [ path: params.output_dir ]
-        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 3) ? "retry" : "terminate"}
+        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 3) ? "retry" : "ignore"}
         cpus = 8
 		// 16.GB for IGC, 64.GB for human-gut GMGC
         memory = {64.GB * task.attempt}
@@ -97,7 +97,7 @@ process {
 		scratch = null	
         executor = "slurm"
         publishDir = [ path: params.output_dir ]
-        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 4) ? "retry" : "terminate"}
+        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 4) ? "retry" : "ignore"}
         cpus = 1
         memory = {32.GB * task.attempt}
         time = {2.d * task.attempt}
@@ -109,7 +109,7 @@ process {
 		scratch = null
         executor = "slurm"
         publishDir = [ path: params.output_dir ]
-        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 4) ? "retry" : "terminate"}
+        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 4) ? "retry" : "ignore"}
         cpus = 1
         memory = {16.GB * task.attempt}
         time = {2.d * task.attempt}
@@ -117,17 +117,17 @@ process {
     }
 	withName: merge_single_fastqs {
         executor = "slurm"
-	    errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 4) ? "retry" : "terminate"}
+	    errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 4) ? "retry" : "ignore"}
 	    cpus = 1
 	    memory = {32.GB * task.attempt}
 	    time = {2.d * task.attempt}
 	    maxRetries = 4
 	}
     withName: collate_stats {
-        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 4) ? "retry" : "terminate"}
+        errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 4) ? "retry" : "ignore"}
         maxRetries = 4
-        memory = 32.GB * task.attempt
-        time = {1.d * task.attempt
+        memory = {32.GB * task.attempt}
+        time = {1.d * task.attempt}
         cpus = 1
     }
 }
