keep_alignments with s - ups

--- a/config/params.yml
+++ b/config/params.yml
@@ -190,7 +190,7 @@ gq_min_identity: 0.97 # integer, optional, default not set
 # large_reference # optional will only have an effect if bam_input_pattern not set
 
 # gq_restrict_metrics # optional, default not set
-gq_keep_alignment: true # optional, default not set, prints alignments as sam file with do_stream
+gq_keep_alignments: true # optional, default not set, prints alignments as sam file with do_stream
 gq_unmarked_orphans: true # boolean, optional, default empty, whether to set the --unmarked_orphans flag
 
 # if dealing with cazymes set it to "domain" - see current issue
