gffquant to v2.16.2 with samtools

--- a/config/run.config
+++ b/config/run.config
@@ -92,8 +92,8 @@ process {
         maxRetries = 3
     }
 	withLabel: gffquant {
-		// 2.16.1
-		container = "docker://ghcr.io/cschu/gff_quantifier:main"
+		// gffquant v2.16.2, samtools v1.13
+		container = "docker://ghcr.io/cschu/gff_quantifier:2.16.2"
 		scratch = null	
         executor = "slurm"
         publishDir = [ path: params.output_dir ]
@@ -104,8 +104,8 @@ process {
         maxRetries = 4
     }
     withName: collate_feature_counts {
-		// 2.16.1
-		container = "docker://ghcr.io/cschu/gff_quantifier:main"		
+		// gffquant v2.16.2, samtools v1.13
+		container = "docker://ghcr.io/cschu/gff_quantifier:v2.16.2"		
 		scratch = null
         executor = "slurm"
         publishDir = [ path: params.output_dir ]
