added missing v (ups)

--- a/config/run.config
+++ b/config/run.config
@@ -93,7 +93,7 @@ process {
     }
 	withLabel: gffquant {
 		// gffquant v2.16.2, samtools v1.13
-		container = "docker://ghcr.io/cschu/gff_quantifier:2.16.2"
+		container = "docker://ghcr.io/cschu/gff_quantifier:v2.16.2"
 		scratch = null	
         executor = "slurm"
         publishDir = [ path: params.output_dir ]
