--- a/config/run.config
+++ b/config/run.config
@@ -92,8 +92,8 @@ process {
         maxRetries = 3
     }
 	withLabel: gffquant {
-		// gffquant v2.16.2, samtools v1.13
-		container = "docker://ghcr.io/cschu/gff_quantifier:v2.16.2"
+		// gffquant v2.16.5, samtools v1.13
+		container = "docker://ghcr.io/cschu/gff_quantifier:v2.16.5"
 		scratch = null	
         executor = "slurm"
         publishDir = [ path: params.output_dir ]
@@ -104,14 +104,14 @@ process {
         maxRetries = 4
     }
     withName: collate_feature_counts {
-		// gffquant v2.16.2, samtools v1.13
-		container = "docker://ghcr.io/cschu/gff_quantifier:v2.16.2"		
+		// gffquant v2.16.5, samtools v1.13
+		container = "docker://ghcr.io/cschu/gff_quantifier:v2.16.5"		
 		scratch = null
         executor = "slurm"
         publishDir = [ path: params.output_dir ]
         errorStrategy = {(task.exitStatus in 137..140 && task.attempt <= 4) ? "retry" : "ignore"}
         cpus = 1
-        memory = {16.GB * task.attempt}
+        // memory = {16.GB * task.attempt}
         time = {2.d * task.attempt}
         maxRetries = 4
     }
